1997-10-29  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* directory.c (opt_set_sort): don't sort curdir if it's NULL.
	(get_dir): moved call to dir_sort here.

	* readdir.c (init_parse_time): new function.
	(parse_time): init non-standard fields of struct tm from global
	now.  Use global now instead of calling time(), gmtime() on each
	invocation.

	* hstrerror.c (hstrerror): renamed h_errlist to _h_errlist to
	avoid conflict with libresolv on Solaris.  _h_errlist & _h_nerr
	now static.

1997-10-25  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_basic.c (fn_help): listings, more info on options.

	* display.c (disp_open): reenter display if open failed.

1997-10-24  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c: (main): moved version tail text to variable
	version_tail; adapted to example in GNU standards 97/07/4.
	(deurl): fixed double increment of s in single statement.

	* fn_basic.c (fn_lcd): don't get cwd if rc_inrc.

1997-10-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_basic.c (fn_set): handle enum options.

	* mkoptab-h.m4, mkoptab-c.m4, mkoptexi.m4: new option type enum.

	* directory.c (dir_sort): new function.
	(sort_unsorted, sort_name, sort_date, sort_name_r, sort_date_r):
	new function.
	(opt_set_sort): new function.

	* readdir.c (read_dir): init new members pos and sorted.

	* directory.h: new member pos in struct direntry; new member sort
	in struct directory.

	* readrc.c (readrc): treat lines beginning with `#' as comments.

	* options.op: (sort) new option.

1997-10-21  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* readdir.c (parse_unix): parse modification time.
	(parse_time): new function.
	
	* directory.h: new member mtime in struct direntry.

	* fn_select.c (aux_download): ftp_close(fout), fclose(fin) -- not
	the other way around.
	(aux_upload): new function.
	(fn_put): new function.

	* ftp.c (ftp_stor): new function.

1997-10-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_close): return if not connected