@@ -1,3 +1,13 @@
+1997-11-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* ftp.c (ftp_init): new function
+	(ftp_pwd): check for and handle DOS path names
+	(ftp_cwd): check for and handle DOS path names
+
+1997-11-03  Dieter Baron  <dillo@danbala.tuwien.ac.at>
+
+	* ftp.c (ftp_pwd): set ftp_pcwd
+
 1997-10-29  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
 	* directory.c (opt_set_sort): don't sort curdir if it's NULL.
